...
            
            var annotationView = mapView.dequeueReusableAnnotationView(withIdentifier: userLocationStyleReuseIndetifier)
            if annotationView == nil {
                annotationView = MAAnnotationView(annotation: annotation, reuseIdentifier: userLocationStyleReuseIndetifier)
            }
            
            annotationView?.image = UIImage(named: "icon_passenger")
            annotationView?.centerOffset = CGPoint(x: 0, y: -22)
            annotationView?.canShowCallout = true
            
            return annotationView!
        }
        
...
    
    func setState(_ state: DDState) {
        self.state = state
        switch self.state {
        case .Init:
            reset()
            buttonAction.setTitle("选择终点", for: .normal)
            buttonAction.removeTarget(self, action: nil, for: .touchUpInside)
            buttonAction.addTarget(self, action: #selector(self.actionAddEnd(sender:)), for: .touchUpInside)
        case .ConfirmDestination:
            requestPathInfo()
            buttonAction.setTitle("马上叫车", for: .normal)
            buttonAction.removeTarget(self, action: nil, for: .touchUpInside)
            buttonAction.addTarget(self, action: #selector(self.actionCallTaxi(sender:)), for: .touchUpInside)
        case .CallTaxi:
            buttonAction.setTitle("我已上车", for: .normal)
            buttonAction.removeTarget(self, action: nil, for: .touchUpInside)
            buttonAction.addTarget(self, action: #selector(self.actionOnTaxi(sender:)), for: .touchUpInside)
        case .OnTaxi:
            buttonAction.setTitle("支付", for: .normal)
            buttonAction.removeTarget(self, action: nil, for: .touchUpInside)
            buttonAction.addTarget(self, action: #selector(self.actionOnPay(sender:)), for: .touchUpInside)
        case .FinishPay:
            buttonAction.setTitle("评价", for: .normal)
            buttonAction.removeTarget(self, action: nil, for: .touchUpInside)
            buttonAction.addTarget(self, action: #selector(self.actionOnEvaluate(sender:)), for: .touchUpInside)
        }
        
        // 设置locationView是否响应交互。
        locationView?.isUserInteractionEnabled = (state.rawValue < DDState.CallTaxi.rawValue)
...
